# smrproxy

./: CMakeLists.txt  Makefile  README.md  RELEASE-NOTES.txt  TODO.txt
include/: smrproxy.h
src/: membarrier.c  smr_util.c  smriterator.c  smrproxy.c  smrproxy.h  smrproxy_intr.h  smrqueue.c  smrref.c
src/platform/linux/: smr_util.c
src/platform/other/: membarrier.c  smr_util.c
src/platform/windows/: membarrier.c  smr_util.c
test/: CMakeLists.txt  Makefile  example.c  example2.c  reftest.c  smrtest.c  smrtest.h  smrtestconfig.c
